add multi-project desktop operations
